fix: Image brightness reduction in dark mode should work with implicitly selected theme
Regression from #169

--- a/assets/scss/themes/_dark.scss
+++ b/assets/scss/themes/_dark.scss
@@ -16,6 +16,10 @@
     .theme-icon-dark {
         display: inline-block;
     }
+    img {
+        filter: brightness(50%);
+    }
+
     @if ($enableHighlight) {
         /* https://xyproto.github.io/splash/docs/all.html */
         /* Color values matching dracula style */
